--- a/Tela de login com HTML e CSS/index.html
+++ b/Tela de login com HTML e CSS/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -20,10 +21,10 @@
             <input type="submit" value="Login">
         </form>
         <div id="social-container">
-            <p>Ou entre pelas suas redes social</p>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fa fa-linkedin"></i>
-        </div>
+            <p>Conecte-se com:</p>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="mailto:seuemail@gmail.com"><i class="fas fa-envelope"></i></a>
+          </div>
         <div id="register-container">
            <p>Ainda não tem um conta?</p>
            <a href="#">Registrar</a>
